// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should parse Clover file 1`] = `
[
  {
    "file": "app/Actions/MyAction.php",
    "functions": {
      "details": [
        {
          "hit": 15,
          "line": 21,
          "name": "__construct",
        },
        {
          "hit": 14,
          "line": 33,
          "name": "execute",
        },
      ],
      "found": 2,
      "hit": 2,
    },
    "lines": {
      "details": [
        {
          "hit": 15,
          "line": 23,
        },
        {
          "hit": 15,
          "line": 24,
        },
        {
          "hit": 15,
          "line": 25,
        },
        {
          "hit": 15,
          "line": 26,
        },
        {
          "hit": 15,
          "line": 27,
        },
        {
          "hit": 14,
          "line": 36,
        },
        {
          "hit": 14,
          "line": 37,
        },
        {
          "hit": 1,
          "line": 38,
        },
        {
          "hit": 1,
          "line": 39,
        },
        {
          "hit": 14,
          "line": 42,
        },
        {
          "hit": 14,
          "line": 43,
        },
        {
          "hit": 14,
          "line": 44,
        },
        {
          "hit": 14,
          "line": 45,
        },
        {
          "hit": 14,
          "line": 46,
        },
        {
          "hit": 14,
          "line": 47,
        },
        {
          "hit": 14,
          "line": 50,
        },
        {
          "hit": 14,
          "line": 51,
        },
        {
          "hit": 1,
          "line": 52,
        },
        {
          "hit": 1,
          "line": 53,
        },
        {
          "hit": 1,
          "line": 54,
        },
        {
          "hit": 1,
          "line": 55,
        },
        {
          "hit": 1,
          "line": 56,
        },
        {
          "hit": 1,
          "line": 57,
        },
        {
          "hit": 13,
          "line": 61,
        },
        {
          "hit": 13,
          "line": 65,
        },
        {
          "hit": 13,
          "line": 67,
        },
        {
          "hit": 13,
          "line": 68,
        },
        {
          "hit": 13,
          "line": 69,
        },
        {
          "hit": 13,
          "line": 70,
        },
        {
          "hit": 13,
          "line": 71,
        },
        {
          "hit": 13,
          "line": 72,
        },
        {
          "hit": 13,
          "line": 74,
        },
        {
          "hit": 13,
          "line": 75,
        },
        {
          "hit": 0,
          "line": 78,
        },
      ],
      "found": 34,
      "hit": 33,
    },
    "path": undefined,
    "title": "App\\Actions\\MyAction",
  },
  {
    "file": "app/Console/Kernel.php",
    "functions": {
      "details": [
        {
          "hit": 13,
          "line": 26,
          "name": "schedule",
        },
      ],
      "found": 1,
      "hit": 1,
    },
    "lines": {
      "details": [
        {
          "hit": 13,
          "line": 29,
        },
      ],
      "found": 1,
      "hit": 1,
    },
    "path": undefined,
    "title": "App\\Console\\Kernel",
  },
  {
    "file": "app/Events/MyEvent.php",
    "functions": {
      "details": [
        {
          "hit": 0,
          "line": 16,
          "name": "__construct",
        },
      ],
      "found": 1,
      "hit": 0,
    },
    "lines": {
      "details": [
        {
          "hit": 0,
          "line": 18,
        },
        {
          "hit": 0,
          "line": 19,
        },
      ],
      "found": 2,
      "hit": 0,
    },
    "path": undefined,
    "title": "App\\Events\\MyEvent",
  },
]
`;

exports[`should parse Clover file with paths 1`] = `
[
  {
    "file": "sub/app.config.ts",
    "functions": {
      "details": [],
      "found": 0,
      "hit": 0,
    },
    "lines": {
      "details": [
        {
          "hit": 1,
          "line": 1,
        },
        {
          "hit": 1,
          "line": 2,
        },
        {
          "hit": 1,
          "line": 3,
        },
        {
          "hit": 1,
          "line": 4,
        },
        {
          "hit": 1,
          "line": 5,
        },
        {
          "hit": 1,
          "line": 6,
        },
        {
          "hit": 1,
          "line": 7,
        },
        {
          "hit": 1,
          "line": 8,
        },
        {
          "hit": 1,
          "line": 9,
        },
      ],
      "found": 9,
      "hit": 9,
    },
    "path": "/Users/gabriel/src/project/sub/app.config.ts",
    "title": null,
  },
  {
    "file": "sub/app.vue",
    "functions": {
      "details": [],
      "found": 0,
      "hit": 0,
    },
    "lines": {
      "details": [
        {
          "hit": 1,
          "line": 1,
        },
        {
          "hit": 1,
          "line": 2,
        },
        {
          "hit": 1,
          "line": 3,
        },
        {
          "hit": 1,
          "line": 4,
        },
        {
          "hit": 1,
          "line": 5,
        },
        {
          "hit": 1,
          "line": 6,
        },
        {
          "hit": 1,
          "line": 7,
        },
        {
          "hit": 1,
          "line": 8,
        },
        {
          "hit": 1,
          "line": 9,
        },
        {
          "hit": 1,
          "line": 10,
        },
        {
          "hit": 1,
          "line": 11,
        },
        {
          "hit": 1,
          "line": 12,
        },
        {
          "hit": 1,
          "line": 13,
        },
        {
          "hit": 1,
          "line": 14,
        },
        {
          "hit": 1,
          "line": 15,
        },
        {
          "hit": 1,
          "line": 16,
        },
        {
          "hit": 1,
          "line": 17,
        },
        {
          "hit": 1,
          "line": 18,
        },
        {
          "hit": 1,
          "line": 19,
        },
        {
          "hit": 1,
          "line": 20,
        },
        {
          "hit": 1,
          "line": 21,
        },
        {
          "hit": 1,
          "line": 22,
        },
        {
          "hit": 1,
          "line": 23,
        },
        {
          "hit": 1,
          "line": 24,
        },
        {
          "hit": 1,
          "line": 25,
        },
        {
          "hit": 1,
          "line": 26,
        },
        {
          "hit": 1,
          "line": 27,
        },
        {
          "hit": 1,
          "line": 28,
        },
        {
          "hit": 1,
          "line": 29,
        },
        {
          "hit": 1,
          "line": 30,
        },
        {
          "hit": 1,
          "line": 31,
        },
        {
          "hit": 1,
          "line": 32,
        },
        {
          "hit": 1,
          "line": 33,
        },
        {
          "hit": 1,
          "line": 34,
        },
        {
          "hit": 1,
          "line": 35,
        },
        {
          "hit": 1,
          "line": 36,
        },
        {
          "hit": 1,
          "line": 37,
        },
        {
          "hit": 1,
          "line": 38,
        },
        {
          "hit": 1,
          "line": 39,
        },
        {
          "hit": 1,
          "line": 40,
        },
        {
          "hit": 1,
          "line": 41,
        },
        {
          "hit": 1,
          "line": 42,
        },
        {
          "hit": 1,
          "line": 43,
        },
        {
          "hit": 1,
          "line": 44,
        },
        {
          "hit": 1,
          "line": 45,
        },
        {
          "hit": 1,
          "line": 46,
        },
        {
          "hit": 1,
          "line": 47,
        },
        {
          "hit": 1,
          "line": 48,
        },
        {
          "hit": 1,
          "line": 49,
        },
        {
          "hit": 1,
          "line": 50,
        },
        {
          "hit": 1,
          "line": 51,
        },
        {
          "hit": 1,
          "line": 52,
        },
        {
          "hit": 1,
          "line": 53,
        },
        {
          "hit": 1,
          "line": 54,
        },
        {
          "hit": 1,
          "line": 55,
        },
        {
          "hit": 1,
          "line": 56,
        },
        {
          "hit": 1,
          "line": 57,
        },
        {
          "hit": 1,
          "line": 58,
        },
        {
          "hit": 1,
          "line": 59,
        },
        {
          "hit": 1,
          "line": 60,
        },
        {
          "hit": 1,
          "line": 61,
        },
        {
          "hit": 1,
          "line": 62,
        },
        {
          "hit": 1,
          "line": 63,
        },
        {
          "hit": 1,
          "line": 64,
        },
        {
          "hit": 1,
          "line": 65,
        },
        {
          "hit": 1,
          "line": 66,
        },
        {
          "hit": 1,
          "line": 67,
        },
        {
          "hit": 1,
          "line": 68,
        },
        {
          "hit": 1,
          "line": 69,
        },
        {
          "hit": 1,
          "line": 70,
        },
        {
          "hit": 1,
          "line": 71,
        },
        {
          "hit": 1,
          "line": 72,
        },
        {
          "hit": 1,
          "line": 73,
        },
        {
          "hit": 1,
          "line": 74,
        },
        {
          "hit": 1,
          "line": 75,
        },
        {
          "hit": 1,
          "line": 76,
        },
        {
          "hit": 1,
          "line": 77,
        },
        {
          "hit": 1,
          "line": 78,
        },
        {
          "hit": 1,
          "line": 79,
        },
        {
          "hit": 1,
          "line": 80,
        },
        {
          "hit": 1,
          "line": 81,
        },
        {
          "hit": 1,
          "line": 82,
        },
        {
          "hit": 1,
          "line": 83,
        },
      ],
      "found": 83,
      "hit": 83,
    },
    "path": "/Users/gabriel/src/project/sub/app.vue",
    "title": null,
  },
]
`;
